--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Ticketing Final</title>
 
+    <!-- link external CSS File -->
+    <link rel="stylesheet" href="style.css">
+
     <!-- link Daisy UI CDN -->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -15,8 +18,69 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class=""></header>
-    <main class=""></main>
+    <header class="container mx-auto mt-12 raleway-font border-2">
+        <!-- Navigation bar (not responsive)-->
+        <div class="flex justify-between items-center">
+            <h2 class="text-4xl font-extrabold">P-Ticket</h2>
+            <ul class="text-[#030712B3] text-xl font-medium flex gap-14">
+                <li>Home</li>
+                <li>About</li>
+                <li>Destination</li>
+                <li>Search</li>
+            </ul>
+            <button class="text-[#1DD100] bg-[#1DD1001A] border-[#1DD10066] border-1 rounded-xl text-xl font-bold flex px-8 py-4"><span class="mr-2">Bus</span><img src="images/bus-icon.png" alt=""></button>
+        </div>
+
+        <!-- Banner (responsive)-->
+        <div class="mt-8 bg-[url(./images/banner.png)] rounded-3xl bg-center bg-cover h-screen flex justify-center items-center">
+            <div class="text-center">
+                <h4 class="text-white text-6xl font-extrabold">End-to-End Travel with</h4>
+                <h4 class="text-[#1DD100] text-6xl font-extrabold pt-4">P Paribahan</h4>
+                <p class="inter-font text-white text-xl pt-8">Yes, you can run unit tests and view the results directly within the app. The <br>integrated testing features allow for a streamlined .</p>
+                <button class="text-[#030712] bg-[#1DD100] rounded-xl text-xl font-bold px-8 py-5 mt-4">Buy Tickets</button>
+            </div>
+        </div>
+
+        <!-- <div class="banner relative pt-8 ">
+            <img class="w-full" src="./images/banner.png" alt="">
+            <div class="text-center absolute top-40 left-90">
+                <h4 class="text-white text-6xl font-extrabold pb-4">End-to-End Travel with</h4>
+                <h4 class="text-[#1DD100] text-6xl font-extrabold">P Paribahan</h4>
+                <p class="text-white text-xl pt-8">Yes, you can run unit tests and view the results directly within the app. The <br>integrated testing features allow for a streamlined .</p>
+                <button class="text-[#030712] bg-[#1DD100] rounded-xl text-xl font-bold px-8 py-5 mt-4">Buy Tickets</button>
+            </div>
+        </div> -->
+    </header>
+    <main class="container mx-auto raleway-font border-2">
+        <!-- Best offer section -->
+        <section class="mt-28">
+            <h2 class="text-[#030712] text-4xl font-bold text-center">Best offers for you</h2>
+            <div class="mt-12 flex gap-6">
+                <div class="bg-[#FFBF0F] p-12 rounded-2xl w-1/2 flex justify-between items-center">
+                    <div class="inter-font ">
+                        <h4 class="text-4xl font-black">15% OFF</h4>
+                        <p class="text-xl font-semibold">on your next purchase</p>
+                        <p class="text-[#03071280] text-lg font-medium">use by January 2024</p>
+                    </div>
+                    <div class="border-l-4 border-white border-dashed pl-10">
+                        <h4 class="text-3xl font-bold">NEW15</h4>
+                        <p class="text-xl font-medium text-[#03071280]">Coupon Code</p>
+                    </div>
+                </div>
+                <div class="bg-[#F78C9C] p-12 rounded-2xl w-1/2 flex justify-between items-center">
+                    <div>
+                        <h4 class="inter-font text-4xl font-black">20% OFF</h4>
+                        <p class="text-xl font-semibold">on your next purchase</p>
+                        <p class="text-[#03071280] text-lg font-medium">use by January 2024</p>
+                    </div>
+                    <div class="border-l-4 border-white border-dashed pl-10">
+                        <h4 class="font-bold text-3xl">Couple 20</h4>
+                        <p class="text-xl font-medium text-[#03071280]">Coupon Code</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer class=""></footer>
 
     <!-- link index.js file -->
