--- a/index.html
+++ b/index.html
@@ -18,11 +18,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header class="container mx-auto mt-12 raleway-font border-2">
+
+    <header class="container mx-auto mt-14 raleway-font">
         <!-- Navigation bar (not responsive)-->
         <div class="flex justify-between items-center">
-            <h2 class="text-4xl font-extrabold">P-Ticket</h2>
-            <ul class="text-[#030712B3] text-xl font-medium flex gap-14">
+            <h2 class="text-[#030712] text-4xl font-extrabold">P-Ticket</h2>
+            <ul class="text-[#030712B3] text-lg font-medium flex gap-14">
                 <li>Home</li>
                 <li>About</li>
                 <li>Destination</li>
@@ -32,54 +33,229 @@
         </div>
 
         <!-- Banner (responsive)-->
-        <div class="mt-8 bg-[url(./images/banner.png)] rounded-3xl bg-center bg-cover h-screen flex justify-center items-center">
-            <div class="text-center">
+        <div class="mt-8 bg-[url(./images/banner.png)] rounded-[32px] bg-center bg-cover h-screen flex justify-center items-center">
+            <div class="text-center pt-16">
                 <h4 class="text-white text-6xl font-extrabold">End-to-End Travel with</h4>
                 <h4 class="text-[#1DD100] text-6xl font-extrabold pt-4">P Paribahan</h4>
-                <p class="inter-font text-white text-xl pt-8">Yes, you can run unit tests and view the results directly within the app. The <br>integrated testing features allow for a streamlined .</p>
+                <p class="inter-font text-white text-lg pt-8">Yes, you can run unit tests and view the results directly within the app. The <br>integrated testing features allow for a streamlined .</p>
                 <button class="text-[#030712] bg-[#1DD100] rounded-xl text-xl font-bold px-8 py-5 mt-4">Buy Tickets</button>
             </div>
         </div>
-
-        <!-- <div class="banner relative pt-8 ">
-            <img class="w-full" src="./images/banner.png" alt="">
-            <div class="text-center absolute top-40 left-90">
-                <h4 class="text-white text-6xl font-extrabold pb-4">End-to-End Travel with</h4>
-                <h4 class="text-[#1DD100] text-6xl font-extrabold">P Paribahan</h4>
-                <p class="text-white text-xl pt-8">Yes, you can run unit tests and view the results directly within the app. The <br>integrated testing features allow for a streamlined .</p>
-                <button class="text-[#030712] bg-[#1DD100] rounded-xl text-xl font-bold px-8 py-5 mt-4">Buy Tickets</button>
-            </div>
-        </div> -->
     </header>
-    <main class="container mx-auto raleway-font border-2">
+
+    <main class="raleway-font mt-44">
         <!-- Best offer section -->
-        <section class="mt-28">
+        <section class="container mx-auto">
             <h2 class="text-[#030712] text-4xl font-bold text-center">Best offers for you</h2>
             <div class="mt-12 flex gap-6">
+
+                <!-- Coupon for new passengers  -->
                 <div class="bg-[#FFBF0F] p-12 rounded-2xl w-1/2 flex justify-between items-center">
-                    <div class="inter-font ">
-                        <h4 class="text-4xl font-black">15% OFF</h4>
-                        <p class="text-xl font-semibold">on your next purchase</p>
+                    <div class="inter-font border-r-2 border-white border-dashed pr-28">
+                        <h4 class="text-[#030712CC] text-4xl font-black">15% OFF</h4>
+                        <p class="text-[#030712CC] text-xl font-semibold">on your next purchase</p>
                         <p class="text-[#03071280] text-lg font-medium">use by January 2024</p>
                     </div>
-                    <div class="border-l-4 border-white border-dashed pl-10">
-                        <h4 class="text-3xl font-bold">NEW15</h4>
-                        <p class="text-xl font-medium text-[#03071280]">Coupon Code</p>
+                    <div class="">
+                        <h4 class="text-[#030712] text-3xl font-bold">NEW15</h4>
+                        <p class="text-[#03071280] text-xl font-medium">Coupon Code</p>
                     </div>
                 </div>
+
+                <!-- Coupon for couple -->
                 <div class="bg-[#F78C9C] p-12 rounded-2xl w-1/2 flex justify-between items-center">
-                    <div>
-                        <h4 class="inter-font text-4xl font-black">20% OFF</h4>
-                        <p class="text-xl font-semibold">on your next purchase</p>
+                    <div class="inter-font inter-font border-r-2 border-white border-dashed pr-28">
+                        <h4 class="text-[#030712CC] inter-font text-4xl font-black">20% OFF</h4>
+                        <p class="text-[#030712CC] text-xl font-semibold">on your next purchase</p>
                         <p class="text-[#03071280] text-lg font-medium">use by January 2024</p>
                     </div>
-                    <div class="border-l-4 border-white border-dashed pl-10">
-                        <h4 class="font-bold text-3xl">Couple 20</h4>
-                        <p class="text-xl font-medium text-[#03071280]">Coupon Code</p>
+                    <div class="">
+                        <h4 class="text-[#030712] font-bold text-3xl">Couple 20</h4>
+                        <p class="text-[#03071280] text-xl font-medium">Coupon Code</p>
+                    </div>
+                </div>
+            </div>
+            <div class="flex justify-center mt-16">
+                <button class="btn btn-soft btn-success border-[#1DD100]">See All Offers</button>
+            </div>
+        </section>
+
+        <!-- P.H Paribahan section-->
+        <section class="bg-[#F7F8F8] mt-32 border-t-2 border-[#1DD100] rounded-t-3xl">
+            <h2 class="text-4xl font-bold pt-32 text-center">P.H Paribahan</h2>
+            <p class="inter-font text-[#03071299] text-lg text-center pt-6">Yes, you can run unit tests and view the results directly within the app. The integrated <br> testing features allow for a streamlined .</p>
+            
+            <!-- Destination information and Seat selection-->
+            <div class="mt-12 w-4/5 mx-auto">
+                <!-- Destination information -->
+                <div class="bg-[#FFFFFF] rounded-3xl p-8 flex items-center justify-between">
+                    <div class="border-[#1DD100] border-r-2 border-dashed flex-1 p-8">
+
+                        <!-- Bus and available seat information -->
+                        <div class="flex justify-between">
+                            <div class="flex gap-3">
+                                <img class="inline" src="./images/bus-logo.png" alt="">
+                                <div class="">
+                                    <h3 class="text-[#030712] text-3xl font-bold">Greenline Paribahan</h3>
+                                    <p class="inter-font text-[#03071299] text-lg pt-2">Coach-009-WEB ! AC_Business</p>
+                                </div>
+                            </div>
+                            <!-- Available seat -->
+                            <div class=" bg-[#1DD10026] rounded-md w-48 p-4 flex gap-2 items-center">
+                                <img src="./images/seat-green.png" alt="">
+                                <p class="inter-font text-lg font-medium text-[#1DD100]"><span id="">40</span> Seats left</p>
+                            </div>
+                        </div>
+
+                        <!-- Route and departure time -->
+                        <div class="bg-[#F7F8F8] mt-6 p-8 rounded-3xl">
+                            <div class="pb-6 flex justify-between">
+                                <p class="text-[#03071299] text-lg font-semibold">Route</p>
+                                <p class="text-[#030712] text-lg font-semibold">Dhaka-Sylhet</p>
+                            </div>
+                            <hr class="text-[#03071233] border-dotted">
+                            <div class="py-6 flex justify-between">
+                                <p class="text-[#03071299] text-lg font-semibold">Departure Time</p>
+                                <p class="text-[#030712] text-lg font-semibold">9:00 PM</p>
+                            </div>
+                            <hr class="text-[#03071233] border-dotted">
+                            <div class="flex justify-between pt-6">
+                                <P class="inter-font bg-[#ebeced] text-[#030712CC] text-base font-medium p-4 rounded-xl">Boarding Point - Laxmipur</P>
+                                <P class="inter-font bg-[#ebeced] text-[#030712CC] text-base font-medium p-4 rounded-xl">Dropping Point - Bogura</P>
+                                <P class="inter-font bg-[#ebeced] text-[#030712CC] text-base font-medium p-4 rounded-xl">Est. Time - 11 Hour</P>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- ticket price -->
+                    <div class="p-16">
+                        <div class="flex justify-center items-center">
+                            <img class="w-12 pb-4" src="./images/fare.png" alt="">
+                        </div>
+                        <div class="text-center">
+                            <h3 class="text-[#030712] text-3xl font-bold pb-2">550 Taka</h3>
+                            <p class="text-[#03071299] text-xl font-semibold">Per Seat</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- seat selection -->
+                <div class="bg-[#FFF] rounded-3xl mt-6 p-8 flex justify-between">
+                    <!-- select set -->
+                    <div class="flex-1 border-[#0307124D] border-r-2 border-dashed pr-8">
+                        <h4 class="text-2xl font-semibold pb-6">Select Your Seat</h4>
+                        <hr class="border-dotted text-[#03071233] pb-6">
+                        <div class="pb-8 flex justify-between">
+                            <div class="flex gap-2">
+                                <img src="./images/seat-gray.png" alt="">
+                                <p class="text-[#03071299] text-lg font-semibold"> Available</p>
+                            </div>
+                            <div class="flex gap-2">
+                                <img src="./images/seat-green-filled.png" alt="">
+                                <p class="inter-font text-lg font-medium text-[#1DD100]"> Selected</p>
+                            </div>
+                        </div>
+                        <hr class="border-dotted text-[#03071233] pb-6">
+                        <!-- see your seat -->
+                        <!-- <div class="grid grid-cols-4 gap-8">
+                            <div class="seat col-start-4 flex justify-center items-center mb-6">
+                                <img src="./images/tabler-icon-steering-wheel.png" alt="">
+                            </div>
+                        </div> -->
+                        <div class="inter-font grid grid-cols-4 gap-8">
+                            <div class="seat col-start-4 flex justify-center items-center">
+                                <img src="./images/tabler-icon-steering-wheel.png" alt="">
+                            </div>
+                            <div id="A1" class="seat">A1</div>
+                            <div id="A2" class="seat">A2</div>
+                            <div id="A3" class="seat">A3</div>
+                            <div id="A4" class="seat">A4</div>
+                            <div id="B1" class="seat">B1</div>
+                            <div id="B2" class="seat">B2</div>
+                            <div id="B3" class="seat">B3</div>
+                            <div id="B4" class="seat">B4</div>
+                            <div id="C1" class="seat">C1</div>
+                            <div id="C2" class="seat">C2</div>
+                            <div id="C3" class="seat">C3</div>
+                            <div id="C4" class="seat">C4</div>
+                            <div id="D1" class="seat">D1</div>
+                            <div id="D2" class="seat">D2</div>
+                            <div id="D3" class="seat">D3</div>
+                            <div id="D4" class="seat">D4</div>
+                            <div id="E1" class="seat">E1</div>
+                            <div id="E2" class="seat">E2</div>
+                            <div id="E3" class="seat">E3</div>
+                            <div id="E4" class="seat">E4</div>
+                            <div id="F1" class="seat">F1</div>
+                            <div id="F2" class="seat">F2</div>
+                            <div id="F3" class="seat">F3</div>
+                            <div id="F4" class="seat">F4</div>
+                            <div id="G1" class="seat">G1</div>
+                            <div id="G2" class="seat">G2</div>
+                            <div id="G3" class="seat">G3</div>
+                            <div id="G4" class="seat">G4</div>
+                            <div id="H1" class="seat">H1</div>
+                            <div id="H2" class="seat">H2</div>
+                            <div id="H3" class="seat">H3</div>
+                            <div id="H4" class="seat">H4</div>
+                            <div id="I1" class="seat">I1</div>
+                            <div id="I2" class="seat">I2</div>
+                            <div id="I3" class="seat">I3</div>
+                            <div id="I4" class="seat">I4</div>
+                            <div id="J1" class="seat">J1</div>
+                            <div id="J2" class="seat">J2</div>
+                            <div id="J3" class="seat">J3</div>
+                            <div id="J4" class="seat">J4</div>
+                        </div>
+                    </div>
+                    <!-- total price -->
+                    <div class="pl-8">
+                        <h4 class="text-2xl font-semibold pb-6">Select Your Seat</h4>
+                        <hr class="border-dotted text-[#03071233] mb-6">
+                        <div class="bg-[#F7F8F8] p-8 rounded-xl">
+                            <div class="flex justify-between pb-6">
+                                <p class="inter-font font-medium text-base">Seat</p>
+                                <p class="inter-font font-medium text-base">Class</p>
+                                <p class="inter-font font-medium text-base">Price</p>
+                            </div>
+                            <hr class="text-[#03071233] border-dotted pb-6">
+                            <div class="pb-6">
+
+                            </div>
+                            <hr class="text-[#03071233] border-dotted pb-6">
+                            <div class="flex justify-between pb-6">
+                                <p class="inter-font font-medium text-base">Total Price</p>
+                                <p class="inter-font font-medium text-base">BDT 0</p>
+                            </div>
+                            <div class="pb-6 flex">
+                                <input type="text" placeholder="Have any copupon?" class="text-[#03071266] bg-white flex-1 border-none rounded-md text-sm font-normal inter-font p-3" name="" id="">
+                                <button class="btn btn-success text-white">Apply</button>
+                            </div>
+                            <div class="pb-6">
+
+                            </div>
+                            <div class="flex justify-between">
+                                <p class="inter-font font-medium text-base">Grand Total</p>
+                                <p class="inter-font font-medium text-base">BDT 0</p>
+                            </div>
+                        </div>
+                        <div class="mt-6 inter-font">
+                            <h3 class="text-[#030712] text-base font-semibold">Passenger Name*</h3>
+                            <input type="text" class="text-[#03071266] border-[#0307121A] p-5 w-full border-1 rounded-xl mt-4 text-base font-semibold" placeholder="Enter your name">
+                            <h3 class="text-[#030712] text-base mt-6 font-semibold">Phone Number*</h3>
+                            <input type="text" class="text-[#03071266] border-[#0307121A] p-5 w-full border-1 rounded-xl mt-4 text-base font-semibold" placeholder="Enter your phone number">
+                            <h3 class="text-[#030712] text-base mt-6 font-semibold">Email ID</h3>
+                            <input type="text" class="text-[#03071266] border-[#0307121A] p-5 w-full border-1 rounded-xl mt-4 text-base font-semibold" placeholder="Enter your email id">
+                            <button class="btn btn-success text-white w-full mt-6">Next</button>
+                            <div class="mt-6 inter-font flex justify-around">
+                                <a href="#" class="text-[#03071266] text-base font-regular underline">Terms and Conditions</a>
+                                <a href="#" class="text-[#03071266] text-base font-regular underline">Cancellation Policy</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
+
     </main>
     <footer class=""></footer>
 
